--- a/src/default-cleaner.css
+++ b/src/default-cleaner.css
@@ -111,6 +111,7 @@ body {
 html,
 body {
 	height: 100%;
+	user-select: none;
 }
 ol,
 ul {
@@ -131,3 +132,5 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
